--- a/src/styles/profilefocused.css
+++ b/src/styles/profilefocused.css
@@ -63,7 +63,8 @@
     font-size: 1.1rem;
     padding: 15px 5px;
     overflow: hidden;
-    max-height: 100%;
+    height: 100%;
+    width: 100%;
     overflow-y: auto;
     border-radius: 8px;
     border: solid 2px var(--color-three);
