--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,3 +11,18 @@
     margin: 0 20px;
     cursor: pointer
 }
+
+.link-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.link-container a {
+    color: white;
+    text-decoration: none;
+}
+
+.link-container a:hover {
+    color: var(--color-two);
+}
