--- a/src/styles/profilefocused.css
+++ b/src/styles/profilefocused.css
@@ -9,7 +9,9 @@
     z-index: 2;
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .8);
-    text-align: center
+    text-align: center;
+    max-height: 90% !important;
+    overflow: auto;
 }
 
 .focused-main-body {
