--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,26 +3,29 @@
     width: 100%;
     height: 5vh;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* padding: 10px 0 5px 0; */
 }
 
-.header div {
-    font-size: 40px;
+
+.header a, .header div {
+    font-size: 1.5rem;
     color: white;
     margin: 0 20px;
-    cursor: pointer
+    cursor: pointer;
+    margin-top: 1.8%;
+    /* padding: 10px 0; */
+
 }
 
-.link-container {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-}
 
-.link-container a {
+
+.header a {
     color: white;
     text-decoration: none;
 }
 
-.link-container a:hover {
+.header a:hover {
     color: var(--color-two);
 }
