--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -10,12 +10,12 @@
     width: 90%;
     max-width: 900px;
     height: auto;
-    max-height: 90% !important;
+    max-height: 80% !important;
+    overflow: auto;
 }
 
 .card-body {
     padding: 0px !important;
-
 }
 
 .carousel-item {
@@ -30,9 +30,7 @@
 }
 .carousel-item img {
     width: 100%;
-    max-height: 80% !important;
     max-width: 80%;
-    height: auto;
     object-fit: contain !important;
 }
 
