add colors to squares

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,9 +1,9 @@
 :root {
-    --color-one: #545454;
-    --color-two: #63adf2;
+    --color-one: #82A0BC;
+    --color-two: #304d6d;;
     --color-three: #a7cced;
-    --color-four: #304d6d;
-    --color-five: #82a0bc;
+    --color-four: #81F7E5;
+    --color-five: #63adf2;
 }
 
 body,
