--- a/src/styles/profileunfocused.css
+++ b/src/styles/profileunfocused.css
@@ -9,6 +9,13 @@
     color: white;
 }
 
+.profile-unfocused-container.active {
+    border: 2px solid black;
+    background-color: var(--color-move-square) !important;
+    color: black
+}
+
+
 .profile-unfocused-container:hover {
     font-weight: bold;
     border-radius: 6px;
