--- a/src/components/health/styles.css
+++ b/src/components/health/styles.css
@@ -15,32 +15,27 @@
                 padding: 20px;
                 background-color: #20c997;
                 height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
 
-                .header-info {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 6px;
-                    min-width: 15%;
-
-                    .header-title {
-                        font-size: 24px;
-                        font-weight: bold;
-                    }
-
-                    .header-viewing {
-                        font-size: 18px;
-                        color: #2b343b;
-                    }
+                .header-title {
+                    font-weight: bold;
+                    font-size: 1.8rem;
                 }
 
-                .header-date-picker {
+                .header-form-grouping {
                     display: flex;
-                    flex-direction: column;
-                    align-items: flext-start;
+                    align-items: center;
+                    justify-content: space-around;
+
                     label {
-                        margin-bottom: 4px;
+                        white-space: nowrap;
+                        margin-right: 10px;
                     }
                 }
+
+
             }
 
         }
@@ -61,6 +56,7 @@
             height: 27%;
             width: 100%;
             background-color: #20c997;
+            padding: 10px;
         }
     }
 
