--- a/src/components/budget/comparison/styles.css
+++ b/src/components/budget/comparison/styles.css
@@ -1,5 +1,9 @@
 .comparison-container {
-    width: 100%;
+    margin: 10px 25px 30px 25px;
     border-radius: 10px;
-    border: 1px solid #d3d3d3
+    border: 1px solid #d3d3d3;
+    height: 87vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
